--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   </div>
 
 <div class="animated fadein">
-  <a href="リンクを後から" class="portfolio_link">
+  <a href="https://intp.site/282/sonoda/introduce/" class="portfolio_link">
     <div class="portfolio">
       <img src="./image/my_portfolio.png" alt="portfolio" />
       <div class="mask1"></div>
@@ -200,16 +200,16 @@
     </div>
     </a>
 
-    <a href="リンクを後から" class="portfolio_link">
+    <a href="https://intp.site/282/sonoda/cafe-B/" class="portfolio_link">
     <div class="portfolio">
-      <img src="画像をいれる" alt="portfolio" />
+      <img src="image/cafe.png" alt="portfolio" />
       <div class="mask1"></div>
       <div class="mask2"></div>
       <div class="caption">
-        <p>【Category】オリジナル作品<br><br>
-          【Title】 <br><br>
-          【Skill】 HTML / CSS / JQuery / Ruby on Rails<br><br>
-          【Detail】
+        <p>【Category】模写サイト<br><br>
+          【Title】カフェサイト<br><br>
+          【Skill】 HTML / CSS / JQuery <br><br>
+          【Detail】職業訓練校でフロントエンドの技術を学ぶために作成したカフェサイトの模写となっています。
         </p>
       </div>
     </div>
@@ -233,13 +233,10 @@
           <div class="explain_contents">
             <ul>
               <li>ユーザーの新規登録</li>
-              <li>ログイン</li>
-              <li>ログアウト</li>
-              <li>ユーザーの画像登録・変更</li>
-              <li>YouTube動画の共有を投稿</li>
-              <li>自分の投稿を削除</li>
-              <li>コメント機能</li>
-              <li>いいね機能</li>
+              <li>ログイン＆ログアウト</li>
+              <li>ユーザーの画像登録</li>
+              <li>画像付きで商品を投稿＆編集</li>
+              <li>検索機能</li>
             </ul>
           </div>
         </div>
