--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
       <img src="./image/photoshop.png" alt="PhotoShop" />
         <p>Level: ★★★★☆</p>
     </div>
-    
+
     <div class="skill">
       <img src="./image/premierepro.png" alt="premierepro" />
-        <p>Level: ★★★★☆</p>
+        <p>Level: ★★★★★</p>
     </div>
 
  </div>
@@ -176,25 +176,29 @@
       <div class="mask1"></div>
       <div class="mask2"></div>
       <div class="caption">
+        <br><br><br>
         <p>【Category】オリジナル作品<br><br>
           【Title】 Ryunosuke Sonoda's Portfolio<br><br>
           【Skill】 HTML / CSS / JQuery <br><br>
-          【Detail】自己紹介サイトです。
+          【Detail】自己紹介サイトです。<br>
+          このサイトのことです！
         </p>
       </div>
     </div>
     </a>
 
-    <a href="リンクを後から" class="portfolio_link">
+    <a href="http://18.179.39.92/" class="portfolio_link">
     <div class="portfolio">
-      <img src="画像をいれる" alt="portfolio" />
+      <img src="image/rails1.png" alt="portfolio" />
       <div class="mask1"></div>
       <div class="mask2"></div>
       <div class="caption">
+        <br><br><br>
         <p>【Category】オリジナル作品<br><br>
-          【Title】<br><br>
-          【Skill】HTML / CSS / JQuery / Ruby on Rails<br><br>
-          【Detail】新しいYouTube動画を知ることができるサービスです。
+          【Title】Goods Shopping<br><br>
+          【Skill】HTML / CSS / Ruby on Rails<br><br>
+          【Detail】自分が他の人におすすめしたい商品を共有できる<br>
+          SNSサービスです！
         </p>
       </div>
     </div>
@@ -206,10 +210,12 @@
       <div class="mask1"></div>
       <div class="mask2"></div>
       <div class="caption">
+        <br><br><br>
         <p>【Category】模写サイト<br><br>
           【Title】カフェサイト<br><br>
           【Skill】 HTML / CSS / JQuery <br><br>
-          【Detail】職業訓練校でフロントエンドの技術を学ぶために作成したカフェサイトの模写となっています。
+          【Detail】職業訓練校でフロントエンドの技術を学ぶために作成した<br>
+          カフェサイトの模写となっています。
         </p>
       </div>
     </div>
@@ -226,24 +232,26 @@
   <div class="animated fadein">
     <div class="explain_body">
         <div class="explain_image">
-          <img src="./image/my_portfolio.png" alt="">
+          <img src="./image/rails3.png" alt="">
         </div>
-        <div class="explain_text"> 
+        <div class="explain_text">
           <div class="explain_title"><h2>機能紹介</h2></div>
           <div class="explain_contents">
             <ul>
-              <li>ユーザーの新規登録</li>
-              <li>ログイン＆ログアウト</li>
+              <br>
               <li>ユーザーの画像登録</li>
               <li>画像付きで商品を投稿＆編集</li>
               <li>検索機能</li>
+              <li>ページネーション機能</li>
+              <li>ゲストログイン</li>
+              <li>ツイッターログイン</li>
             </ul>
           </div>
         </div>
     </div>
   </div>
 </div>
-  
+
 
 
 <footer>
